--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,20 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aegis (AEG) | 頂級加密安全協議 V1.0.2</title>
-    <link rel="stylesheet" href="style.css?v=1.0.2">
+    <title>Aegis (AEG) | MetaMask Portfolio Style</title>
+    <link rel="stylesheet" href="style.css?v=1.0.4">
     <link rel="icon" type="image/png" href="logo.png">
-    <link rel="manifest" href="manifest.json">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=Poppins:wght@700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <nav class="navbar">
         <div class="nav-content">
             <div class="brand">
-                <img src="logo.png" alt="Aegis Logo" class="nav-logo">
-                <span class="brand-text">AEGIS</span>
+                <span class="brand-logo-text">Meta<br>Mask</span>
             </div>
             <div class="nav-actions">
                 <select id="lang-select" class="lang-switcher">
@@ -25,208 +22,97 @@
                     <option value="en">English</option>
                 </select>
                 <button id="connect-wallet" class="btn-connect">
-                    <img src="https://img.icons8.com/isometric/30/wallet.png" alt="wallet-icon" class="btn-icon">
                     <span class="btn-text" data-i18n="nav_connect">連接錢包</span>
-                    <div class="dot"></div>
                 </button>
             </div>
         </div>
     </nav>
 
-    <main class="hero">
-        <div class="hero-bg">
-            <div class="blob"></div>
-            <div class="blob-2"></div>
+    <main class="portfolio-container">
+        <!-- Account Info -->
+        <div class="account-selector fade-in">
+            <span class="account-name">Account 1</span>
+            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"
+                style="margin-top:2px;">
+                <path d="M6 9l6 6 6-6" />
+            </svg>
         </div>
 
-        <div class="content-wrapper">
-            <section class="intro-section fade-in">
-                <h1 class="main-title"><span class="gradient-text" data-i18n="hero_title">Aegis 盾級加密安全協議</span></h1>
-                <p class="hero-subtitle" data-i18n="hero_subtitle">在 Base 網路上構建最堅固的去中心化資產</p>
-                <div class="hero-action-buttons">
-                    <a href="#swap" class="btn-buy-now" data-i18n="hero_buy">立即購買 AEG</a>
-                </div>
-            </section>
+        <!-- Main Portfolio Card -->
+        <div class="mm-main-card fade-in">
+            <div class="fund-illustration">
+                <img src="https://img.icons8.com/isometric/100/museum.png" alt="fund-art" />
+            </div>
+            <h2 class="card-title" data-i18n="hero_title">Fund your wallet</h2>
+            <p class="card-desc" data-i18n="hero_subtitle">Get your wallet ready to use web3</p>
+            <button class="btn-add-funds">Add funds</button>
+        </div>
 
-            <!-- 一體化核心儀表板 (Master Dashboard) -->
-            <section class="dashboard-section fade-in">
-                <div class="master-dashboard">
-                    <!-- 左側：資產與數據概覽 -->
-                    <div class="dashboard-panel side-panel">
-                        <div class="panel-section">
-                            <h3 class="panel-tag" data-i18n="stat_overview">代幣概況</h3>
-                            <div class="stats-compact">
-                                <div class="stat-box">
-                                    <label data-i18n="stat_symbol">代幣符號</label>
-                                    <span id="token-symbol" class="value-small">AEG</span>
-                                </div>
-                                <div class="stat-box">
-                                    <label data-i18n="stat_total">總發行量</label>
-                                    <span id="total-supply" class="value-small">1,000,000,000</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel-divider"></div>
-                        <div class="panel-section">
-                            <h3 class="panel-tag" data-i18n="balance_title">您的資產</h3>
-                            <div class="balance-main">
-                                <span id="user-balance" class="massive-text">0.00</span>
-                                <span class="unit-text">AEG</span>
-                            </div>
-                            <div id="wallet-address" class="address-pill" data-i18n="balance_addr_none">未連接</div>
-                        </div>
+        <!-- Quick Actions Bar -->
+        <div class="quick-actions fade-in">
+            <div class="action-item" id="buy-action">
+                <div class="action-icon"><strong>$</strong></div>
+                <span data-i18n="action_buy">購買</span>
+            </div>
+            <div class="action-item" id="swap-btn-mock">
+                <div class="action-icon">⇄</div>
+                <span data-i18n="action_swap">兌換</span>
+            </div>
+            <div class="action-item" id="burn-btn">
+                <div class="action-icon">🔥</div>
+                <span data-i18n="burn_btn">銷毀</span>
+            </div>
+            <div class="action-item" id="stake-btn">
+                <div class="action-icon">📥</div>
+                <span data-i18n="stake_btn">領收</span>
+            </div>
+        </div>
+
+        <!-- Banner -->
+        <div class="mm-banner fade-in">
+            <img src="https://img.icons8.com/color/48/bitcoin.png" alt="btc" />
+            <div class="banner-text">
+                <strong data-i18n="banner_title">Say hello to Aegis</strong>
+                <p data-i18n="banner_desc">Build, manage, and secure assets on Base.</p>
+            </div>
+            <span class="close-banner">✕</span>
+        </div>
+
+        <!-- Asset Section -->
+        <div class="assets-section fade-in">
+            <div class="tabs-bar">
+                <span class="tab active">Tokens</span>
+                <span class="tab">DeFi</span>
+                <span class="tab">NFTs</span>
+                <span class="tab" data-i18n="tx_history">交易紀錄</span>
+            </div>
+
+            <div class="asset-list">
+                <div class="asset-item-row" id="asset-focus">
+                    <img src="logo.png" class="asset-logo" alt="aeg" />
+                    <div class="asset-name-info">
+                        <span class="asset-symbol">Aegis (AEG)</span>
+                        <span class="asset-change">-4.21%</span>
                     </div>
-
-                    <!-- 右側：交互與功能操作 -->
-                    <div class="dashboard-panel main-panel">
-                        <div class="panel-tabs">
-                            <div class="panel-section active">
-                                <h3 class="panel-tag" data-i18n="action_title">核心交互</h3>
-                                <div class="action-grid">
-                                    <div class="input-block">
-                                        <input type="number" id="burn-amount" data-i18n="burn_placeholder"
-                                            placeholder="輸入銷毀數量 (Burn)">
-                                        <button id="burn-btn" class="btn-action-primary"
-                                            data-i18n="burn_btn">確認銷毀</button>
-                                    </div>
-                                    <div class="input-block">
-                                        <div class="staking-stats-mini">
-                                            <span data-i18n="stake_staked">已存放數量</span>: <span id="staked-amount">0.00
-                                                AEG</span>
-                                            <span class="apy-text">APY: 18.5%</span>
-                                        </div>
-                                        <input type="number" id="stake-amount" data-i18n="stake_placeholder"
-                                            placeholder="輸入質押數量">
-                                        <button id="stake-btn" class="btn-action-gold"
-                                            data-i18n="stake_btn">開始質押</button>
-                                    </div>
-                                </div>
-
-                                <div id="owner-actions" class="owner-panel-internal" style="display: none;">
-                                    <h4 class="owner-title" data-i18n="owner_panel">管理權限</h4>
-                                    <div class="mint-flex">
-                                        <input type="text" id="mint-address" placeholder="接收地址">
-                                        <input type="number" id="mint-amount" placeholder="數量">
-                                        <button id="mint-btn" class="btn-action-gold" data-i18n="mint_btn">執行鑄造</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="asset-value-info">
+                        <span class="value-usd">US$0.00</span>
+                        <span class="value-native"><span id="user-balance">0.00</span> AEG</span>
                     </div>
                 </div>
-            </section>
+            </div>
+        </div>
 
-            <!-- Tokenomics Section -->
-            <section class="tokenomics-section fade-in">
-                <h2 class="section-title" data-i18n="tokenomics_title">代幣分配 (Tokenomics)</h2>
-                <div class="tokenomics-hero-box">
-                    <div class="tokenomics-viz-grid">
-                        <div class="viz-item-wide">
-                            <div class="viz-info">
-                                <span class="viz-title" data-i18n="tokenomics_lp">流動性鎖定</span>
-                                <span class="viz-percent">60%</span>
-                            </div>
-                            <div class="progress-track">
-                                <div class="progress-bar" style="width: 60%"></div>
-                            </div>
-                        </div>
-                        <div class="viz-item-wide">
-                            <div class="viz-info">
-                                <span class="viz-title" data-i18n="tokenomics_rewards">質押獎賞</span>
-                                <span class="viz-percent">20%</span>
-                            </div>
-                            <div class="progress-track">
-                                <div class="progress-bar rewards-bg" style="width: 20%"></div>
-                            </div>
-                        </div>
-                        <div class="viz-item-wide">
-                            <div class="viz-info">
-                                <span class="viz-title" data-i18n="tokenomics_team">核心團隊</span>
-                                <span class="viz-percent">10%</span>
-                            </div>
-                            <div class="progress-track">
-                                <div class="progress-bar team-bg" style="width: 10%"></div>
-                            </div>
-                        </div>
-                        <div class="viz-item-wide">
-                            <div class="viz-info">
-                                <span class="viz-title" data-i18n="tokenomics_marketing">行銷與生態</span>
-                                <span class="viz-percent">10%</span>
-                            </div>
-                            <div class="progress-track">
-                                <div class="progress-bar market-bg" style="width: 10%"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <!-- Roadmap Section -->
-            <section class="roadmap-section fade-in">
-                <h2 class="section-title" data-i18n="roadmap_title">發展藍圖</h2>
-                <div class="roadmap-container">
-                    <div class="roadmap-item">
-                        <div class="roadmap-q" data-i18n="roadmap_q1">Q1: 核心開發</div>
-                        <p class="roadmap-text" data-i18n="roadmap_q1_text">智能合約審計、官網 V1 上線與種子輪部署。</p>
-                    </div>
-                    <div class="roadmap-item">
-                        <div class="roadmap-q" data-i18n="roadmap_q2">Q2: 市場擴張</div>
-                        <p class="roadmap-text" data-i18n="roadmap_q2_text">DEX 流動性注入、開啟 Staking 質押激勵與社區建設。</p>
-                    </div>
-                    <div class="roadmap-item">
-                        <div class="roadmap-q" data-i18n="roadmap_q3">Q3: 生態系統</div>
-                        <p class="roadmap-text" data-i18n="roadmap_q3_text">DAO 治理上線、跨鏈橋接到以太坊主網與二層擴展。</p>
-                    </div>
-                    <div class="roadmap-item">
-                        <div class="roadmap-q" data-i18n="roadmap_q4">Q4: 全球化戰略</div>
-                        <p class="roadmap-text" data-i18n="roadmap_q4_text">CEX 登錄、實體支付場景對接與 Aegis 安全生態成型。</p>
-                    </div>
-                </div>
-            </section>
-
-            <!-- DEX Swap Section -->
-            <section id="swap" class="dex-section fade-in">
-                <div class="glass-card dex-container">
-                    <div class="dex-header">
-                        <img src="https://img.icons8.com/isometric/50/data-transfer.png" />
-                        <h2 data-i18n="dex_title">直接兌換 (Direct Swap)</h2>
-                    </div>
-                    <div class="swap-widget-box">
-                        <iframe
-                            src="https://app.uniswap.org/#/swap?outputCurrency=0x0000000000000000000000000000000000000000&chain=base"
-                            height="500px" width="100%" style="border:0; border-radius: 20px;"></iframe>
-                    </div>
-                </div>
-            </section>
-
-            <!-- Trust Section -->
-            <section class="trust-section fade-in">
-                <h2 class="section-title" data-i18n="trust_title">安全與審計</h2>
-                <div class="audit-logos">
-                    <div class="audit-item" title="CertiK (Pending)">
-                        <img src="https://img.icons8.com/color/48/verified-account.png" />
-                        <span>CertiK</span>
-                    </div>
-                    <div class="audit-item" title="OpenZeppelin">
-                        <img src="https://img.icons8.com/color/48/shield.png" />
-                        <span>OpenZeppelin</span>
-                    </div>
-                    <div class="audit-item" title="Hacken">
-                        <img src="https://img.icons8.com/color/48/lock.png" />
-                        <span>Hacken</span>
-                    </div>
-                </div>
-                <div class="resource-buttons" style="margin-top: 2rem;">
-                    <a href="https://github.com/huchialun9-ctrl/AEG.git" target="_blank" class="btn-outline">
-                        <img src="https://img.icons8.com/ios-glyphs/30/github.png" alt="github" />
-                        <span data-i18n="btn_github">GitHub</span>
-                    </a>
-                    <a href="../docs/index.html" target="_blank" class="btn-outline">
-                        <img src="https://img.icons8.com/ios-glyphs/30/document.png" alt="doc" />
-                        <span data-i18n="btn_docs">技術文檔</span>
-                    </a>
-                </div>
-            </section>
+        <!-- Hidden inputs for logic & Other UI elements for functionality -->
+        <div style="display: none;">
+            <input type="number" id="burn-amount" value="0">
+            <input type="number" id="stake-amount" value="0">
+            <input type="text" id="mint-address">
+            <input type="number" id="mint-amount">
+            <button id="mint-btn"></button>
+            <div id="total-supply"></div>
+            <div id="token-symbol"></div>
+            <div id="wallet-address"></div>
+            <div id="owner-actions"></div>
         </div>
     </main>
 
@@ -249,7 +135,7 @@
 
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ethers/6.11.1/ethers.umd.min.js"></script>
-    <script type="module" src="app.js?v=1.0.2"></script>
+    <script type="module" src="app.js?v=1.0.4"></script>
 </body>
 
 </html>
